--- a/v1/source/scss/colorSchemes/programming.scss
+++ b/v1/source/scss/colorSchemes/programming.scss
@@ -1,4 +1,5 @@
 html.code {
-    background-color: #010101;
-    color: #1FC742;
+    --mainBackground: #010101;
+    --mainText: #1FC742;
+    --mainAccent: #1FC742;
 }
