--- a/v1/source/scss/style.scss
+++ b/v1/source/scss/style.scss
@@ -1,2 +1,3 @@
-@use './mainStyles';
-@use './colorSchemes/programming';
+@use './mainStyles.scss';
+@use './colorSchemes/colorify.scss';
+@use './colorSchemes/programming.scss';
