--- a/v1/source/scss/colorSchemes/programming.scss
+++ b/v1/source/scss/colorSchemes/programming.scss
@@ -2,4 +2,6 @@ html.code {
     --mainBackground: #010101;
     --mainText: #1FC742;
     --mainAccent: #1FC742;
+    --codeBackground: hsl(0, 0%, 8%);
+    --codeColor: #000;
 }
