--- a/v1/source/scss/sidebar.scss
+++ b/v1/source/scss/sidebar.scss
@@ -29,7 +29,8 @@
     }
     @include utils.desktop(){
         display: block !important;/*Yes, !important, but this is to counter on-element display:none;*/
-        max-width: 20%;
+        width: 28%;
+        max-width: 400px;
         float: left;
     }
     ul {
