Titlebar size change

--- a/v1/css/style.css
+++ b/v1/css/style.css
@@ -34,6 +34,7 @@ canvas.logo {
 @media (min-width: 701px) {
   .titlebar .title {
     text-align: center;
+    font-size: 40px;
   }
 
   .titlebar .logo {
