--- a/v1/css/style.css
+++ b/v1/css/style.css
@@ -34,6 +34,7 @@ canvas.logo {
 @media (min-width: 701px) {
   .titlebar .title {
     text-align: center;
+    font-size: 40px;
   }
 
   .titlebar .logo {
@@ -113,19 +114,21 @@ canvas.logo {
     margin: 6px 0;
   }
 }
-#content {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
-}
 @media (min-width: 701px) and (max-width: 1200px) {
   #content {
-    max-width: 50%;
+    width: 50%;
   }
 }
 @media (min-width: 1201px) {
   #content {
-    max-width: 500px;
+    width: 500px;
+  }
+}
+@media (min-width: 701px) {
+  #content {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
   }
 }
 
@@ -170,6 +173,7 @@ html pre code {
 }
 html code {
   font-size: inherit;
+  background: var(--codeBackground);
 }
 html .titlebar a, html .titlebar a:hover, html .titlebar a:visited {
   color: var(--mainText);
