--- a/v1/source/scss/colorSchemes/colorify.scss
+++ b/v1/source/scss/colorSchemes/colorify.scss
@@ -59,4 +59,7 @@ html {
             }
         }
     }
+    .math > img {
+        filter: invert(52%) sepia(5%) saturate(0%) hue-rotate(280deg) brightness(96%) contrast(87%);
+    }
 }
