--- a/v1/source/scss/style.scss
+++ b/v1/source/scss/style.scss
@@ -7,6 +7,7 @@
 @use './sidebar.scss';
 @use './hamburger.scss';
 @use './content.scss';
+@use './math.scss';
 
 // Color
 @use './colorSchemes/colorify.scss';
